# custom-sweatbox

./: .gitignore  Cargo.toml  SIMULATION.md
profiles/: TCE + TCNE.json
src/: config.rs  lib.rs  main.rs  scenario.rs
src/aircraft/: aircraft.rs  flight_plan.rs  mod.rs
src/server/: client.rs  controller.rs  controller_handler.rs  fsd_server.rs  message.rs  message_handler.rs  mod.rs  pilot.rs  pilot_handler.rs
src/simulation/: ai_controller.rs  ai_pilot.rs  mod.rs  simulator.rs
src/simulator/: flight_plan.rs  mod.rs  plane.rs  plane_mode.rs  route.rs  runner.rs
src/utils/: mod.rs  navigation.rs  performance.rs  procedures.rs
tests/: navigation_tests.rs  route_tests.rs
